--- a/todo_list/templates/todo_list/register.html
+++ b/todo_list/templates/todo_list/register.html
@@ -1,6 +1,11 @@
 {% extends 'todo_list/main.html' %}
 
 {% block content %}
+
+{% for message in messages %}
+{{message}}
+{% endfor %}
+
 <div class="header-bar">
     <h1>Sign Up</h1>
 </div>
