--- a/todo_list/templates/todo_list/task_form.html
+++ b/todo_list/templates/todo_list/task_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="header-bar">
-    <a href="{% url 'home' %}">&#8592; Back</a>
+    <a href="{% url 'index' %}">&#8592; Back</a>
 </div>
     <div class="card-body">
         <form method="post" action="">
